# NoteApp

./: .gitignore  backend.json  docker-compose.yml  nginx.conf  openapi.json
noteapp-backend/: .env  Cargo.toml  Dockerfile  connect_postgress.sh  run_postgres.sh
noteapp-backend/migrations/: 20231121205948_create_notes.sql  20231213163724_create_users.sql
noteapp-backend/src/: auth.rs  init_db.rs  lib.rs  main.rs
noteapp-backend/src/models/: error.rs  mod.rs  note.rs  user.rs
noteapp-backend/src/routes/: error.rs  mod.rs  note.rs  user.rs
noteapp-frontend/: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Trunk.toml  build  index.html  tailwind.config.js
noteapp-frontend/src/: lib.rs  main.rs  routes.rs
noteapp-frontend/src/api/: mod.rs  note.rs  types.rs  user.rs
noteapp-frontend/src/components/: button.rs  error.rs  input.rs  mod.rs  navigator.rs  note.rs
noteapp-frontend/src/pages/: add_note.rs  delete_profile.rs  login.rs  mod.rs  notes.rs  profile.rs  register.rs  update_password.rs  update_profile.rs
thesis/: .$database.drawio.bkp  .$database.drawio.dtmp  database.drawio  main.tex
