[package]
name = "noteapp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argon2 = "0.5.0"
axum = { version = "0.6.17", features = ["headers", "macros"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
base64 = "0.21.2"
bb8 = "0.8.0"
boolinator = "2.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
http = "0.2.9"
hyper = "0.14.26"
image = "0.24.6"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
password-hash = { version = "0.5.0", features = ["rand_core"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.2", features = ["postgres", "uuid", "time", "chrono", "runtime-tokio"] }
thiserror = "1.0.40"
time = "0.3.31"
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }

[profile.release-with-debug]
inherits = "release"
debug = true
